--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,20 @@
+plugins:
+  - jekyll-relative-links
+relative_links:
+  enabled: true
+  collections: true
+include:
+  - CONTRIBUTING.md
+  - README.md
+  - LICENSE.md
+  - COPYING.md
+  - CODE_OF_CONDUCT.md
+  - CONTRIBUTING.md
+  - ISSUE_TEMPLATE.md
+  - PULL_REQUEST_TEMPLATE.md
+
+title: Attention for Classification
+description: Embed - Encode - Attend - Predict
+show_downloads: true
+
 theme: jekyll-theme-cayman
